Add user voting on question
