# src/Controller/QuestionController.php
@@ -6,8 +6,10 @@ use Q2aApi\Base\AbstractController;
 use Q2aApi\Dto\QuestionDto;
 use Q2aApi\Exception\ForbiddenHttpException;
 use Q2aApi\Exception\NotFoundHttpException;
+use Q2aApi\Exception\BadRequestHttpException;
 use Q2aApi\Http\Response;
 use Q2aApi\Response\QuestionResponse;
+use Q2aApi\Response\VoteResponse;
 
 class QuestionController extends AbstractController
 {
@@ -29,5 +31,29 @@ class QuestionController extends AbstractController
         }
 
         return new QuestionResponse($question, qa_get_favorite_non_qs_map(), true);
+    }
+    
+    public function vote(int $questionId): Response
+    {
+        $vote = $this->request->get('vote');
+        if (!in_array($vote, array(-1, 0, 1))) {
+            throw new BadRequestHttpException();
+        }
+
+        $userId = qa_get_logged_in_userid();
+        $cookieId = qa_cookie_get();
+        $post = qa_db_select_with_pending(qa_db_full_post_selectspec($userId, $questionId));
+        if ($post === null || $post['basetype'] !== QuestionDto::TYPE_QUESTION) {
+            throw new NotFoundHttpException();
+        }
+
+        require_once QA_INCLUDE_DIR.'app/votes.php';
+        $voteError = qa_vote_error_html($post, $vote, $userId, qa_request());
+        if (!empty($voteError)) {
+            throw new ForbiddenHttpException();
+        }
+
+        qa_vote_set($post, $userId, qa_get_logged_in_handle(), $cookieId, $vote);
+        return new VoteResponse($vote);
     }
 }
